--- a/frontend/src/partials/reminder.html
+++ b/frontend/src/partials/reminder.html
@@ -1,6 +1,6 @@
 <article>
 	<header>
-		<div class="button" ng-click="back()" >Back</div>
+		<div class="button" ng-click="back()" >&lt;</div>
 		<h1>{{$root.$route.current.name}}</h1>
 	</header>
 	<div ng-if="lastRated !== null">
