testapi, filters, fixes

--- a/frontend/src/css/index.less
+++ b/frontend/src/css/index.less
@@ -158,7 +158,10 @@ main{
 	height:100%;
     flex: 2 1 auto;
 
-   	overflow-x:hidden;
-    overflow-y:auto;
-    min-height: 400px;
+   	overflow:hidden;
+}
+
+.view{
+	overflow-y: auto;
+    height: 93%;
 }
