--- a/frontend/src/partials/reminder.html
+++ b/frontend/src/partials/reminder.html
@@ -5,7 +5,7 @@
 	</header>
 	<div ng-if="lastRated !== null">
 		<h1>{{lastRated.name}}</h1>
-		<h2>{{lastRated.age}}</h2>
-		<div>{{lastRated.desc}}</div>
+		<h2>{{lastRated.data.age}}</h2>
+		<div>{{lastRated.data.desc}}</div>
 	</div>
 </article>
