rememberme fix +tweaks

--- a/frontend/src/partials/people.html
+++ b/frontend/src/partials/people.html
@@ -2,7 +2,7 @@
 	<header>
 		<div class="button" aside-menu-toggle="leftMenu" >&#9776;</div>
 		<h1>{{$root.$route.current.name}}</h1>
-		<div class="button" ng-click="toggleOptions();" >Opt</div>
+		<div class="button" ng-click="toggleOptions();" >&#128269;</div>
 	</header>
 	<div class="view" ng-if="people.length > 0">
 		<div class="options" ng-class="{'closed': optClosed}">
