--- a/frontend/src/css/judgement.less
+++ b/frontend/src/css/judgement.less
@@ -12,8 +12,7 @@
 	    {
 	    	flex:1 1 auto;
 	    	background-color: #ddd;
-		    padding: 10px;
-
+	    	font-size:30px;
 		    &:first-child
 		    {
 		    	border-right:thin solid gray;
