--- a/frontend/src/partials/judgement.html
+++ b/frontend/src/partials/judgement.html
@@ -10,8 +10,8 @@
 		<h2>{{current.data.age}}</h2>
 		<div>{{current.data.desc}}</div>
 		<footer class="judgementButtons">
-			<div class="worse" ng-click="worse()">X</div>
-			<div class="better" ng-click="better()">Y</div>
+			<div class="worse" ng-click="worse()">&#10005;</div>
+			<div class="better" ng-click="better()">&#10003;</div>
 		</footer>
 	</div>
 	<div ng-if="current === null">
