--- a/frontend/src/css/params.less
+++ b/frontend/src/css/params.less
@@ -1,6 +1,9 @@
 /*COLORS*/
 @menuColor: #222;
 @menuColor2: #A97D5D;
+@blocked: #dd514c;
+@algorithm: #0e90d2;
+@accepted: #5eb95e;
 
 /*Paths*/
 @imgPath: "../img";
