--- a/frontend/src/css/people.less
+++ b/frontend/src/css/people.less
@@ -83,35 +83,34 @@
 				    border-radius: 5px;
 				    padding: 5px 0;
 				    cursor:pointer;
+
+				    color:rgba(255,255,255,0.5);
+
+				    &.selected{
+						color:rgba(255,255,255,1);				    
+				    }
 			    }
 
 			    .blocked
 			    {
-			    	color:#777;
-			    	
-			    	background-color:indianred;
+			    	background-color:lighten(@blocked, 30%);
 			    	&.selected{
-			    		color:white;
-			    		background-color:darkred;
+			    		background-color:@blocked;
 			    	}	
 			    }
 			    .algorithm
 			    {
-			    	color:#777;
 
-			    	background-color:lightblue;
+			    	background-color:lighten(@algorithm, 30%);
 			    	&.selected{
-			    		color:white;
-			    		background-color:dodgerblue;
+			    		background-color:@algorithm;
 			    	}
 			    }
 			    .accepted
 			    {
-			    	color:#777;
-			    	background-color:lightgreen;
+			    	background-color:lighten(@accepted, 30%);
 			    	&.selected{
-			    		color:white;
-			    		background-color:lime;
+			    		background-color:@accepted;
 			    	}
 			    }
 		    }
