--- a/frontend/src/partials/judgement.html
+++ b/frontend/src/partials/judgement.html
@@ -4,11 +4,10 @@
 		<h1>{{$root.$route.current.name}}</h1>
 		<div class="button" ng-click="goToLastRated()">&#9872;</div>
 	</header>
-	<div ng-if="current !== null">
+	<div class="application" ng-if="current !== null">
 		<h1>{{current.name}}</h1>
-		<h2>{{current.id}}</h2>
-		<h2>{{current.data.age}}</h2>
-		<div>{{current.data.desc}}</div>
+		<h2 class="email">{{current.mail}}</h2>
+		<div class="desc">{{current.data.desc}}</div>
 		<footer class="judgementButtons">
 			<div class="worse" ng-click="worse()">&#10005;</div>
 			<div class="better" ng-click="better()">&#10003;</div>
