--- a/frontend/src/css/judgement.less
+++ b/frontend/src/css/judgement.less
@@ -1,11 +1,10 @@
 #judgement{
 	/* See index, there's shared style */
-	.judgementButtons
+	footer.judgementButtons
 	{
-	    position: absolute;
+		flex:0 0 40px;
 	    bottom: 0;
 	    display: flex;
-	    width: 100%;
 	    text-align: center;
 	    
 	    div
@@ -13,6 +12,7 @@
 	    	flex:1 1 auto;
 	    	background-color: #ddd;
 	    	font-size:30px;
+	    	color:white;
 		    &:first-child
 		    {
 		    	border-right:thin solid gray;
@@ -23,12 +23,12 @@
 
 	    .better
 	    {
-		    color: rgba(0, 255, 0, 0.88);
+	        background-color: rgb(118, 210, 118);
 	    }
 
 	    .worse
 	    {
-	        color: rgba(255, 0, 0, 0.88);
+            background-color: rgb(239, 107, 107);
 	    }
 	}
 }
