--- a/frontend/src/css/index.less
+++ b/frontend/src/css/index.less
@@ -20,6 +20,7 @@ body{
 header{
 	display: flex;
 	border-bottom: thin solid gray;
+	flex: 0 0 40px;
 	div.button
 	{
 		display: flex;
@@ -43,11 +44,10 @@ header{
 	h1
 	{
 		flex: 1 1 auto;
-		margin: 0;
+		margin: 5px 0 0 0;
 		padding: 0;
 		text-align: center;
 		font-family:'Minecraftia';
-        margin-bottom: -10px;
     	font-size: 20px;
 	}
 }
@@ -126,7 +126,7 @@ div.loading{
     background-color: rgba(125,125,125,0.6);
     z-index:99;
     &:after{
-	    content: "☕";
+	    content: "L"; //content: "☕";
 	    background-color: yellow;
 	    font-size: 60px;
 	    width: 100px;
@@ -170,10 +170,17 @@ main{
     height: 93%;
 }
 
+main > div > article{
+	height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 /*Shared*/
 #judgement, #reminder, #person
 {
 	.application{
+		flex: 1 1 auto;
 		h1{
 			text-align:center;
 			margin-bottom: 0;
