frontend API fixes

--- a/frontend/src/partials/person.html
+++ b/frontend/src/partials/person.html
@@ -11,6 +11,7 @@
 	<div class="application" ng-if="person !== null && person !== undefined">
 		<h1>{{person.name}}</h1>
 		<h2 class="email">{{person.mail}}</h2>
+		<div class="desc">{{person.best_language}}</div>
 		<div class="desc">{{person.data.desc}}</div>
 		<footer>
 			<div class="status-selector">
