--- a/frontend/src/partials/reminder.html
+++ b/frontend/src/partials/reminder.html
@@ -7,6 +7,7 @@
 	<div class="application" ng-if="lastRated !== null">
 		<h1>{{lastRated.name}}</h1>
 		<h2 class="email">{{lastRated.mail}}</h2>
+		<div class="desc">{{person.best_language}}</div>
 		<div class="desc">{{lastRated.data.desc}}</div>
 	</div>
 </article>
