--- a/frontend/src/partials/judgement.html
+++ b/frontend/src/partials/judgement.html
@@ -7,6 +7,7 @@
 	<div class="application" ng-if="current !== null">
 		<h1>{{current.name}}</h1>
 		<h2 class="email">{{current.mail}}</h2>
+		<div class="desc">{{person.best_language}}</div>
 		<div class="desc">{{current.data.desc}}</div>
 	</div>
 	<footer class="judgementButtons">
