--- a/frontend/src/css/index.less
+++ b/frontend/src/css/index.less
@@ -198,4 +198,15 @@ main > div > article{
 			margin:30px;
 		}
 	}
+
+	.empty{
+		flex:1 1 auto;
+		display:flex;
+		align-items: center;
+		justify-content:center;
+		text-align:center;
+		h1{
+			font-size:2em;
+		}
+	}
 }
