--- a/frontend/src/partials/judgement.html
+++ b/frontend/src/partials/judgement.html
@@ -15,6 +15,7 @@
 		<div class="better" ng-click="better()">&#10003;</div>
 	</footer>
 	<div class="empty" ng-if="current.name === undefined">
-		<h1>Good job! You're done!</h1>
+		<h1>Good job! No more applications for you to judge...</h1>
+		<h2>...for now. Please, come back later.</h2>
 	</div>
 </article>
