frontend application view. version 1.0b

--- a/frontend/src/css/params.less
+++ b/frontend/src/css/params.less
@@ -5,6 +5,10 @@
 @algorithm: #0e90d2;
 @accepted: #5eb95e;
 @milk: #f0f0f0;
+@travel:#5EB9B9;
+@newbie:#B95E99;
+@team:#B3B95E;
+@noadult:#B95E5E;
 
 /*Paths*/
 @imgPath: "../img";
