--- a/frontend/src/css/index.less
+++ b/frontend/src/css/index.less
@@ -191,23 +191,125 @@ main > div > article{
 /*Shared*/
 #judgement, #reminder, #person
 {
-	.application{
+	.application
+	{
 		flex: 1 1 auto;
-		h1{
+		overflow-y:auto;
+		.title
+		{
+			margin:0 20px;
+			h1
+			{
+				text-align:center;
+				margin-bottom: 0;
+			}
+
+			h2.email{
+				text-align: center;
+				word-wrap: break-word;
+				font-size: 16px;
+				font-weight: 100;
+				color: gray;
+				margin-top: 0;
+
+			}
+
+		}
+		div.misc
+		{
+			display:flex;
+			justify-content:center;
+			align-items:center;
+			flex-wrap:wrap;
+			color:white;
+			div
+			{
+				margin:10px;
+				padding:5px;
+				font-size: 20px;
+				font-weight:bold;
+
+				&.team
+				{
+					background-color:@team;
+				}
+
+				&.travel
+				{
+					background-color:@travel;
+				}
+
+				&.newbie
+				{
+					background-color: @newbie;
+				}
+
+				&.noadult
+				{
+					background-color: @noadult;
+				}
+			}
+		}
+
+		div.webs
+		{
+			flex:1 1 auto;
+			display:flex;
+			align-items:center;
+			justify-content:center;
+			margin-top:15px;
+
+			img, div
+			{
+				flex:0;
+				margin:0 10px;
+				width:32px;
+				opacity:0.4;
+				&.active
+				{
+					cursor:pointer;
+					opacity:1;
+				}
+			}
+
+			div
+			{
+				font-size:25px;
+				font-weight:bold;
+				margin-left:0px;			
+			}
+		}
+
+		table
+		{
+			margin: 0 20px;
+			th, td
+			{
+				padding-top:10px;
+
+				&.near
+				{
+					padding:0;
+				}
+
+				&.centered
+				{
+					text-align:center;
+				}
+			}
+
+			th
+			{
+				text-align:right;
+				width:40%;
+
+			}
+		}
+		div.face
+		{
 			text-align:center;
-			margin-bottom: 0;
-		}
-
-		h2.email{
-			text-align: center;
-			font-size: 16px;
-			font-weight: 100;
-			color: gray;
-			margin-top: 0;
-		}
-
-		.desc{
-			margin:30px;
+			margin:25px;
+			font-weight: bold;
 		}
 	}
 
