--- a/frontend/src/css/judgement.less
+++ b/frontend/src/css/judgement.less
@@ -1,13 +1,25 @@
 #judgement{
 	/* See index, there's shared style */
+
+
 	footer.judgementButtons
 	{
-		flex:0 0 40px;
+		flex: 0 0 40px;
 	    bottom: 0;
 	    display: flex;
 	    text-align: center;
 	    cursor:pointer;
-	    
+	 
+	    &::before
+	    {
+			content: ' ';
+			position: absolute;
+			width: 100%;
+			height: 30px;
+			margin-top: -30px;
+			background: linear-gradient(transparent,white);
+	    }
+
 	    div
 	    {
 	    	flex:1 1 auto;
