--- a/frontend/src/css/people.less
+++ b/frontend/src/css/people.less
@@ -61,6 +61,8 @@
 		    {
 		    	padding-left:25px;
 		    	flex: 3 1 auto;
+				overflow:hidden;
+				text-overflow:ellipsis;
 		    	//make directive?
 		    	.status
 		    	{
