--- a/frontend/src/css/person.less
+++ b/frontend/src/css/person.less
@@ -1,9 +1,28 @@
 #person{
 	/* See index.less for shared styles */
-	footer{
+	.application
+	{
+		div.face
+		{
+			margin-bottom:70px;
+		}
+	}
+	footer
+	{
 		position: absolute;
 		bottom: 0;
 		width: 100%;
+
+	    &::before
+	    {
+			content: ' ';
+			position: absolute;
+			width: 100%;
+			height: 30px;
+			margin-top: -30px;
+			background: linear-gradient(transparent,white);
+	    }
+
 		.status-selector{
 			display:flex;
 			text-align:center;
@@ -27,7 +46,7 @@
 			    &.algorithm
 			    {
 
-			    	background-color:lighten(@algorithm, 30%);
+			    	background-color:lighten(@algorithm, 35%);
 			    	&.selected{
 			    		background-color:@algorithm;
 			    	}
