--- a/frontend/src/partials/people.html
+++ b/frontend/src/partials/people.html
@@ -35,7 +35,7 @@
 					<div class="blocked" ng-class="{'selected': (person.state == 'rejected')}" ng-click="changeStatus(person, 'rejected'); $event.stopPropagation()">
 						B
 					</div>
-					<div class="algorithm" ng-class="{'selected': (person.state == 'tba')}" ng-click="changeStatus(person, 'tba'); $event.stopPropagation()">
+					<div class="algorithm" ng-class="{'selected': (person.state == 'tbd')}" ng-click="changeStatus(person, 'tbd'); $event.stopPropagation()">
 						L
 					</div>
 					<div class="accepted" ng-class="{'selected': (person.state == 'accepted')}" ng-click="changeStatus(person, 'accepted'); $event.stopPropagation()">
