--- a/frontend/src/partials/person.html
+++ b/frontend/src/partials/person.html
@@ -61,7 +61,7 @@
 				<div class="blocked" ng-class="{'selected': (person.state == 'rejected')}" ng-click="changeStatus(person, 'rejected')">
 					B
 				</div>
-				<div class="algorithm" ng-class="{'selected': (person.state == 'tba')}" ng-click="changeStatus(person, 'tba')">
+				<div class="algorithm" ng-class="{'selected': (person.state == 'tbd')}" ng-click="changeStatus(person, 'tbd')">
 					L
 				</div>
 				<div class="accepted" ng-class="{'selected': (person.state == 'accepted')}" ng-click="changeStatus(person, 'accepted')">
