style costumization params added

--- a/frontend/src/css/params.less
+++ b/frontend/src/css/params.less
@@ -1,20 +1,49 @@
-/*COLORS*/
-@menuColor: #222;
-@menuColor2: #A97D5D;
-@blocked: #dd514c;
-@algorithm: #0e90d2;
-@accepted: #5eb95e;
-@milk: #f0f0f0;
+/*-----COLORS------*/
+
+//General
+@generalBg: white;
+@generalColor: black;
+
+//People
+@optionsBg: #edf;
+@optionsColor:black;
+
+//Aside
+@asideBg: #222;
+@asideColor: #d0d0d0;
+@userInfoBg: rgba(255,255,255,0.2);
+@userInfoBorder: #7b7474;
+@userInfoNameColor: #eee;
+@userInfoColor: black;
+
+//Application tags
 @travel:#5EB9B9;
 @newbie:#B95E99;
 @team:#B3B95E;
 @noadult:#B95E5E;
 
-/*Paths*/
+//States
+@blocked: #dd514c;
+@algorithm: #0e90d2;
+@accepted: #5eb95e;
+
+//Header
+@headerBtnBg: #EEE;
+@headerBtnColor:#999;
+@headerBg: white;
+@headerColor: black;
+
+//Footer
+@footerColor: white;
+
+//Misc
+@milk: #f0f0f0;
+
+/*-----PATHS------*/
 @imgPath: "../img";
 @fontPath: "../font";
 
-/*transitions*/
+/*-----TRANSITIONS------*/
 @transitionLength: 500ms;
 @menuOpenTime: 500ms;
 
