--- a/frontend/src/css/judgement.less
+++ b/frontend/src/css/judgement.less
@@ -17,7 +17,7 @@
 			width: 100%;
 			height: 30px;
 			margin-top: -30px;
-			background: linear-gradient(transparent,white);
+			background: linear-gradient(transparent,@generalBg);
 	    }
 
 	    div
