minor fix. dist version 1.0b

--- a/frontend/src/css/index.less
+++ b/frontend/src/css/index.less
@@ -287,8 +287,10 @@ main > div > article{
 
 		table
 		{
+			max-width:700px;
 			color:@generalColor;
-			margin: 0 20px;
+			margin:0 auto;
+			padding: 0 20px;
 			th, td
 			{
 				padding-top:10px;
