--- a/frontend/src/partials/people.html
+++ b/frontend/src/partials/people.html
@@ -17,8 +17,8 @@
 				</fieldset>
 				<fieldset>
 					<h3>Selectors</h3>
-					<label for="checktba">TBA</label>
-					<input id="checktba" type="checkbox" ng-model="f.tba" />
+					<label for="checktbd">TBD</label>
+					<input id="checktbd" type="checkbox" ng-model="f.tbd" />
 					<label for="checkrejected">Rejected</label>
 					<input id="checkrejected" type="checkbox" ng-model="f.rejected"/>
 					<label for="checkaccepted">Accepted</label>
