--- a/frontend/src/css/person.less
+++ b/frontend/src/css/person.less
@@ -7,6 +7,18 @@
 			margin-bottom:70px;
 		}
 	}
+
+	.teammates
+	{
+		text-align: center;
+		padding:0 20px;
+		max-width:700px;
+		margin:0 auto;
+
+		pre{
+			white-space: pre-wrap;
+		}
+	}
 	footer
 	{
 		position: absolute;
